[tool.poetry]
name = "spark-utils"
version = "0.1.0"
description = ""
authors = ["Adrian Abreu <aabreu@countergrogwise.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyspark = "^3.2.1"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
